# psql_vcs

./: .bumpversion.cfg  .gitattributes  .pre-commit-ci-config.yaml  .pre-commit-config.yaml  Makefile  README.md  README.ru-RU.md  pyproject.toml  requirements.txt
.github/workflows/: auto_format.yml  build_python_package.yml  format.yml  format_ant_lint.yml  lint.yml  pip_publish.yml  pre-commit.yml  push.yml  tests.yml
src/psql_vcs/: __init__.py
src/psql_vcs/models/: __init__.py  migrator_args.py  schemas.py  shcema_description.py
src/psql_vcs/modules/: __init__.py  connector.py  logger.py  postgres_schema_processing.py
src/psql_vcs/sql/: __init__.py  completed_sql.py  uncompleted_sql.py
tests/: test_import.py
