[build-system]
requires = ["setuptools>=83.0.0", "pre-commit>=4.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psql_vcs"
description = "Postgres version control system"
version = "1.0.0a0"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Beloborod", email = "me@beloborod.ru" }
]
dependencies = [
    "results>=2.0.1783086339",
    "psycopg-binary>=3.3.4",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "psycopg-pool>=3.3.1",
]
license = { file = "LICENSE.txt" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.docformatter]
recursive = true
in-place = true
exclude = [
    "src/psql_vcs/sql/",
]
